Fix images, fix big text on mobile

--- a/_sass/tale/_post.scss
+++ b/_sass/tale/_post.scss
@@ -15,7 +15,10 @@
   &-title {
     color: $default-shade;
     font-family: $sans-serif;
-    font-size: 4rem;
+    font-size: 3rem;
+    @media (min-width: 600px) {
+      font-size: 4rem;
+    }
     margin: 1rem 0;
     text-align: center;
   }
